Fixed potrait viewing on mobile, aswell as mobile text selection

--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ body{
     background: rgba(119,13,13,0.92)64%;
     background: radial-gradient(circle, rgba(119,13,13,0.92) 60%, 
     rgba(0,0,0,0.6) 100%);
+    user-select: none;
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 canvas{
     height:100%;
@@ -44,7 +52,7 @@ canvas{
     left:50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    user-select: none;
+    
 }
 .time{
     color: #d99c3b;
